# proconnect_agent_rag

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py  main.py  mock_data.json  rag_engine.py
src/linkedin_icebreaker/: app.py  main.py
src/linkedin_icebreaker/services/: icebreaker.py
src/proconnect_agent_rag/: app.py  config.py  main.py
src/proconnect_agent_rag/services/: icebreaker.py
src/proconnect_agent_rag/utils/: logging.py
tests/: test_icebreaker.py
